--- a/environment.yml
+++ b/environment.yml
@@ -2,5 +2,9 @@ name: odys_virtual_school_2020
 channels:
   - defaults
 dependencies:
-  - numpy=1.19.2=py37hadc3359_0
-
+  - numpy
+  - netCDF4
+  - cftime
+  - cartopy
+  - matplotlib
+  - os
