--- a/environment.yml
+++ b/environment.yml
@@ -2,8 +2,8 @@ name: odys_virtual_school_2020
 channels:
   - defaults
 dependencies:
-  - numpy
-  - netCDF4
-  - cftime
-  - cartopy
-  - matplotlib
+  - numpy=1.20.2
+  - netCDF4=1.5.3
+  - cftime=1.1.2
+  - cartopy=0.17.0
+  - matplotlib=3.3.4
